tests/snapshots/snapshot_tests__array_nest_split_05.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_nest_split_05.vmt",
    status: Good,
    used_instantiations: [],
}
