tests/snapshots/snapshot_tests__array_nonlin_init_mult.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_nonlin_init_mult.vmt",
    status: Panic,
    used_instantiations: [],
}
