tests/snapshots/snapshot_tests__array_nonlin_square.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_nonlin_square.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a_next i_next i) i_next) i)",
        "(= (Read-Int-Int (Write-Int-Int a i i) i) i)",
        "(= (Read-Int-Int (Write-Int-Int a i 4) i) 4)",
        "(= (Read-Int-Int (Write-Int-Int a i 25) i) 25)",
        "(= (Read-Int-Int (Write-Int-Int a i 9) i) 9)",
        "(= (Read-Int-Int (Write-Int-Int a i 16) i) 16)",
        "(= (Read-Int-Int (Write-Int-Int a i 36) i) 36)",
        "(= (Read-Int-Int (Write-Int-Int a i 49) i) 49)",
        "(= (Read-Int-Int (Write-Int-Int a i 64) i) 64)",
        "(= (Read-Int-Int (Write-Int-Int a i 81) i) 81)",
        "(= (Read-Int-Int (Write-Int-Int a_next Z i) Z) i)",
        "(= (Read-Int-Int (Write-Int-Int a i 49) i) (Read-Int-Int a i))",
        "(= (Read-Int-Int (Write-Int-Int a Z 49) Z) 49)",
        "(= (Read-Int-Int (Write-Int-Int a_next Z i) Z) (Read-Int-Int a_next Z))",
    ],
}
